--- a/frontweb/package.json
+++ b/frontweb/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-content-loader": "^6.2.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.47.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.66.1",
