--- a/frontweb/package.json
+++ b/frontweb/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/qs": "^6.9.8",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^1.5.0",
     "bootstrap": "^5.0.2",
+    "qs": "^6.11.2",
     "react": "^17.0.2",
     "react-content-loader": "^6.2.1",
     "react-dom": "^17.0.2",
