--- a/frontweb/package.json
+++ b/frontweb/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^12.0.0",
     "@types/qs": "^6.9.8",
     "@types/react": "^17.0.0",
@@ -15,6 +16,7 @@
     "@types/react-router-dom": "^5.1.7",
     "axios": "^1.5.0",
     "bootstrap": "^5.0.2",
+    "jwt-decode": "^3.1.2",
     "qs": "^6.11.2",
     "react": "^17.0.2",
     "react-content-loader": "^6.2.1",
